kubernetes/sqrbot-jr-ingress.yaml
# Ingress that works with the nginx-ingress to route traffic to the app's
# path.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sqrbot-jr
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: sqrbot-jr
spec:
  rules:
    - host: events.lsst.codes
      http:
        paths:
          - backend:
              serviceName: sqrbot-jr
              servicePort: 8080
            path: /sqrbot-jr
  tls:
    - hosts:
        - events.lsst.codes
      secretName: events-lsst-codes-tls
